# quanttide-devops-python

./: .gitignore  README.md  pyproject.toml
devops_sdk/: config.py
examples/: migrate_coding_to_github.py
quanttide_devops/: git.py
quanttide_devops/repositories/: repo.py
