[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quanttide-devops-python"
version = "0.1.0-alpha.1"
description = "Python SDK for Specification of QuantTide DevOps"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
readme = "README.md"
packages = [{include = "quanttide_devops"}]

[tool.poetry.dependencies]
python = "^3.9"
