[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quanttide-devops-python"
version = "0.1.0-alpha.1"
description = "Python SDK for Specification of QuantTide DevOps"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
readme = "README.md"
packages = [{include = "quanttide_devops"}]

[tool.poetry.dependencies]
python = "^3.9"
gitpython = "^3.1.40"
semantic-version = "^2.10.0"
pygithub = "^2.1.1"
coding-devops-sdk-py = "^0.1.1"
